hard-gists/6105220/run.log
=== Docker Run Log for 6105220 ===
Started at: Mi 29. Okt 16:20:32 CET 2025

[2025-10-29 16:20:33] START: Running container for 6105220
[2025-10-29 16:20:33] SUCCESS: Container 16d2e52e8135dcb8ee2e859156ef70409143da75e8739ff659a7e4722c45e707 started for 6105220
=== Container logs for 6105220 ===
  File "/snippet.py", line 17
    print "Hello, World!"
    ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6105220 ===
[2025-10-29 16:20:35] INFO: Container 16d2e52e8135dcb8ee2e859156ef70409143da75e8739ff659a7e4722c45e707 has stopped
